--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -4,7 +4,7 @@
 
   <head>
 
-    <title>https://possiblepolyhedrons.github.io/web-dev-hw/</title>
+    <title>Healthy-ish Peanut Butter Cookies</title>
 
     <meta charset="UTF-8">
 
