Image Link problems
Image link displays image in markdown but not on live site. Attempting to remedy.

--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -27,7 +27,8 @@
 
 <!-- Cookie Image -->
 
-          ![PB Cookies](./images/healthy pb cookies.png)
+          ![PB Cookies](.\images/healthy pb cookies.png)
+          <img>
 
         <h2>Ingredients
           <br>
