--- a/Assignment-05/index.html
+++ b/Assignment-05/index.html
@@ -27,8 +27,7 @@
 
 <!-- Cookie Image -->
 
-          ![PB Cookies](.\images/healthy pb cookies.png)
-          <img>
+          <img src=".\images/healthy pb cookies.png">
 
         <h2>Ingredients
           <br>
