--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 
 <html>
+      <head>
 
-    <html>
-
-        <head>
-
+          <title>Assignment 7</title>
+          <meta name="author" content="Kevin peel">
           <meta charset="UTF-8">
-
-          <meta name="description" content="Assigment 6 info, tbd">
-
+          <meta name="description" content="Assigment 7 info, tbd">
           <meta name="author" content="Kevin Peel">
-
           <meta name="viewport" content="width=device-width, inital-scale=1.0">
 
           <style>
-
             body {
               background-color: powderblue;
               text-align: center;
@@ -33,38 +28,34 @@
               font-size: small;
               font-family: Arial;
             }
-
           </style>
+      </head>
 
-        </head>
-
-        <body>
+      <body>
 
   <!-- div elements with id for art, audio, video, lyrics, and copyright, all with the container class -->
 
-                <div id="art">
-                    <div class="container">
-                      <h1><b>Flood</h1>
-
-                    </div>
+                <div id="art" class="w3-container">
+                    <h1><i>Flood</i> by <i>They Might Be Giants</i></h1>
+                    <img src="./images/flood.jpg" alt="cover of 'Flood' from They Might be Giants" title="'Flood' by They Might Be Giants'" width="700" height="500">
                 </div>
 
-                <div id="track audio">
-                    <div class="container">
-
-                    </div>
+                <div id="audio" class="w3-container">
+                  <h2>Istanbul (Not Constantinople)</h2>
+                  <audio preload controls>
+                    <source src="<iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232327701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>">
+                  </audio>
                 </div>
 
-                <div id="video">
-                    <div class="container">
-
-
-                    </div>
+                <div id="video" class="w3-container">
+                  <h2>Music Video</h2>
+                  <video src="<iframe width="700" height="500" src="https://www.youtube.com/embed/xo0X77OBJUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>" preload controls>
+                  </video>
                 </div>
 
-                <div id=.lyrics>
-                    <div class=".container">
-                      <div class=.lyrics>
+                <div id=.lyricsclass="w3-container">
+                  <h2>Istanbul (Not Constantinople) Lyrics</h2>
+                      <div id=.lyrics>
 
                         <p>Istanbul was Constantinople<br>Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night</p>
                         <p>Every gal in Constantinople<br>Lives in Istanbul, not Constantinople<br>So if you've a date in Constantinople<br>She'll be waiting in Istabul</p>
@@ -73,30 +64,21 @@
                         <p>Istanbul, Istanbul</p>
                         <p>Istanbul, Istanbul</p>
                         <p>Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way</p>
-                        <p>Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business bu the Turks</p>
+                        <p>Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business but the Turks</p>
                         <p>So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks</p>
                         <p>Istanbul</p>
 
-                      </div>
                     </div>
                 </div>
 
-                <div id="copyright">
-                    <div class="container">
-
-                    </div>
+                <div id="copyright" class="w3-container">
+                  <h3>Copyright</h3>
+                  <p>I do not own or have any rights to this material, it was used as a school project.</p>
+                  <video poster="./images/mart-logo-poster.jpg" width="400" height="400" preload controls loop>
+                    <source src="./images/mart-logo-animated.mp4" type="video/mp4;codecs='avc1.42E01E,mp4a.40.2'">
+                    <source src="./images/mart-logo-animated.webm" type="video/webm;codecs='vp8,vorbis'">
+                  </video><br>
+                  <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20montana&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>                
                 </div>
-
-
-
-            <!-- Fun with spreadsheets -->
-
-
-
-        </body>
-
-
-
-    </head>
-
+      </body>
 </html>
