--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -3,11 +3,11 @@
 <html>
       <head>
 
-          <title>Assignment 7</title>
           <meta charset="UTF-8">
           <meta name="description" content="Assigment 7 info, tbd">
           <meta name="author" content="Kevin Peel">
           <meta name="viewport" content="width=device-width, inital-scale=1.0">
+          <title>Assignment 7</title>
 
           <style>
             body {
@@ -34,24 +34,22 @@
 
   <!-- div elements with id for art, audio, video, lyrics, and copyright, all with the container class -->
 
-                <div id="art" class="w3-container">
+                <div id="art" class=".container">
                     <h1><i>Flood</i> by <i>They Might Be Giants</i></h1>
                     <img src="./media/flood.jpg" alt="cover of 'Flood' from They Might be Giants" title="'Flood' by They Might Be Giants'" width="700" height="500">
                 </div>
 
-                <div id="audio" class="w3-container">
+                <div id="audio" class=".container">
                   <h2>Istanbul (Not Constantinople)</h2>
-                  <audio preload controls>
                     <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232327701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>"
-                  </audio>
                 </div>
 
-                <div id="video" class="w3-container">
+                <div id="video" class=".container">
                   <h2>Music Video</h2>
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/xo0X77OBJUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
-                <div id=.lyricsclass="w3-container">
+                <div id=lyrics class=".container">
                   <h2>Istanbul (Not Constantinople) Lyrics</h2>
                       <div id=.lyrics>
 
@@ -69,14 +67,14 @@
                     </div>
                 </div>
 
-                <div id="copyright" class="w3-container">
+                <div id="copyright" class=".container">
                   <h3>Copyright</h3>
                   <p>I do not own or have any rights to this material, it was used as a school project.</p>
                   <video poster="./media/mart-logo-poster.jpg" width="400" height="400" preload controls loop>
                     <source src="./media/mart-logo-animated.mp4" type='video/mp4;codecs="avc1.42E01E, mp4a.40.2"'>
                     <source src="./media/mart-logo-animated.webm" type="video/webm;codecs='vp8,vorbis'">
                   </video>
-                    <div class="mapouter" class="w3-container"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20montana&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
+                    <div class="mapouter" class=".container"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20montana&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
                 </div>
       </body>
 </html>
