--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -36,7 +36,7 @@
 
                 <div id="art" class="container">
                     <h1><i>Flood</i> by <i>They Might Be Giants</i></h1>
-                    <img src="./media/flood.jpg" alt="cover of 'Flood' from They Might be Giants" title="'Flood' by They Might Be Giants'" width="700" height="500">
+                    <img src="./media/flood.jpg" alt="cover of 'Flood' from They Might be Giants" title="'Flood' by They Might Be Giants'" width="500" height="500">
                 </div>
 
                 <div id="audio" class="container">
@@ -52,7 +52,7 @@
                 <div id=lyrics class="lyrics">
                   <h2>Istanbul (Not Constantinople) Lyrics</h2>
 
-                        <p>Istanbul was Constantinople<br>Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night</p>
+                        <pr>Istanbul was Constantinople<br>Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night</p>
                         <p>Every gal in Constantinople<br>Lives in Istanbul, not Constantinople<br>So if you've a date in Constantinople<br>She'll be waiting in Istabul</p>
                         <p>Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way</p>
                         <p>So, take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks</p>
@@ -61,9 +61,7 @@
                         <p>Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way</p>
                         <p>Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business but the Turks</p>
                         <p>So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks</p>
-                        <p>Istanbul</p>
-
-                    </div>
+                        <p>Istanbul</pr>
                 </div>
 
                 <div id="copyright" class="container">
@@ -75,7 +73,7 @@
                   </video>
 
                     <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20montana&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.embedgooglemap.net"></a></div><style>.mapouter{text-align:right;height:500px;width:600px;}.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div>
-                    
+
                 </div>
       </body>
 </html>
