problems with <p> and <pre>

--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -41,7 +41,7 @@
 
                 <div id="audio" class="container">
                   <h2>Istanbul (Not Constantinople)</h2>
-                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232327701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>"
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/232327701&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
                 </div>
 
                 <div id="video" class="container">
@@ -49,19 +49,23 @@
                   <iframe width="560" height="315" src="https://www.youtube.com/embed/xo0X77OBJUg" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
 
-                <div id=lyrics class="lyrics">
+                <div id=lyrics class="container" class="lyrics">
                   <h2>Istanbul (Not Constantinople) Lyrics</h2>
+<pre>
+Help help why wont this work
+</pre>
+                        Istanbul was Constantinople<br>
+                        Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night<
+                        Every gal in Constantinople<br>Lives in Istanbul, not Constantinople<br>So if you've a date in Constantinople<br>She'll be waiting in Istabul<br><br>
+                        Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way<br><br>
+                        So, take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks<br>
+                        <br>Istanbul, Istanbul<br>
+                        Istanbul, Istanbul<br><br>
+                        Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way<br>
+                        Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business but the Turks<br><br>
+                        So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks<br>
+                        Istanbul
 
-                        <pr>Istanbul was Constantinople<br>Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night</p>
-                        <p>Every gal in Constantinople<br>Lives in Istanbul, not Constantinople<br>So if you've a date in Constantinople<br>She'll be waiting in Istabul</p>
-                        <p>Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way</p>
-                        <p>So, take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks</p>
-                        <p>Istanbul, Istanbul</p>
-                        <p>Istanbul, Istanbul</p>
-                        <p>Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way</p>
-                        <p>Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business but the Turks</p>
-                        <p>So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks</p>
-                        <p>Istanbul</pr>
                 </div>
 
                 <div id="copyright" class="container">
