--- a/Assignment-07/index.html
+++ b/Assignment-07/index.html
@@ -51,11 +51,9 @@
 
                 <div id=lyrics class="container" class="lyrics">
                   <h2>Istanbul (Not Constantinople) Lyrics</h2>
-<pre>
-Help help why wont this work
-</pre>
+                      <p class="lyrics">
                         Istanbul was Constantinople<br>
-                        Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night<
+                        Now it's Istanbul, not Constantinople<br>Been a long time gone, Oh Constantinople<br>Now it's Turkish delight on a moonlit night<br><br>
                         Every gal in Constantinople<br>Lives in Istanbul, not Constantinople<br>So if you've a date in Constantinople<br>She'll be waiting in Istabul<br><br>
                         Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way<br><br>
                         So, take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks<br>
@@ -63,9 +61,9 @@ Help help why wont this work
                         Istanbul, Istanbul<br><br>
                         Even old New York was once New Amsterdam<br>Why they changed it I can't say<br>People just liked it better that way<br>
                         Istanbul was Constantinople<br>Now it's Istanbul not Constantinople<br>Been a long time gone, Oh Constantinople<br>Why did Constaninople get the works?<br>That's nobody's business but the Turks<br><br>
-                        So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks<br>
+                        So, Take me back to Constantinople<br>No, you can't go back to Constantinople<br>Been a long time, Oh Constantinople<br>Why did Constantinople get the works?<br>That's nobody's business but the Turks<br><br>
                         Istanbul
-
+                      </p>
                 </div>
 
                 <div id="copyright" class="container">
